Kubernetes/go-svc.yaml
apiVersion: v1
kind: Service   
metadata:
  name: go-svc
  labels:
    app: go
spec:
  type: NodePort  
  ports:
  - port: 3000 
    targetPort: 3000
  selector:
    app: go
